--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
-    "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
-    "mongoose": "^6.3.2",
     "nanoid": "^4.0.0",
-    "nodemailer": "^6.7.8",
-    "nodemon": "^2.0.19"
+    "nodemailer": "^6.7.8"
   }
 }
